[gd_scene load_steps=12 format=2]

[ext_resource path="res://Canos3.tscn" type="PackedScene" id=1]
[ext_resource path="res://Material da Aula/bg ceu noite.jpg" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUB.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main3.gd" type="Script" id=5]
[ext_resource path="res://Material da Aula/04B_30__.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Material da Aula/sons/Colgera-Phase-1-Part-3-_-The-Legend-of-Zelda_-Tears-of-the-Kingdom-OST-_320_.wav" type="AudioStream" id=7]

[sub_resource type="PanoramaSky" id=5]
panorama = ExtResource( 2 )

[sub_resource type="Environment" id=6]
background_mode = 2
background_sky = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[node name="Main3" type="Spatial"]
script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="Canos4" parent="WorldEnvironment" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.267, 2.011, -20 )

[node name="Canos3" parent="WorldEnvironment" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.282044, 3.84684, -15.0006 )

[node name="Canos2" parent="WorldEnvironment" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.266766, 2.01093, -10.1395 )

[node name="Player" parent="WorldEnvironment" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.0835, 0 )

[node name="HUB" parent="WorldEnvironment" instance=ExtResource( 4 )]

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.15501, 0 )
light_energy = 0.6

[node name="gerac2" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Label3" type="Label" parent="."]
margin_left = 14.0
margin_top = 21.0
margin_right = 424.0
margin_bottom = 28.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Phase 3 - Green HIlls (Night)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
anchor_right = 424.0
margin_left = 625.255
margin_top = 22.1494
margin_right = 1049.25
margin_bottom = 50.1494
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Objetivo: Chegue a 60 pontos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 2.0
autoplay = true
[connection signal="timeout" from="gerac2" to="." method="_on_gerac2_timeout"]
[connection signal="timeout" from="gerac2" to="." method="_on_gerac_timeout"]
